# asena

./: .gitignore  Cargo.toml  README.md  example.ase  example.brex  package.json  tsconfig.json  webpack.config.js
asena/: Cargo.toml  IO.ase  Nat.ase  Test.ase
asena-ast/: Cargo.toml
asena-ast-db/: Cargo.toml
asena-ast-db/src/: build_system.rs  commands.rs  database.rs  db.rs  def.rs  driver.rs  error.rs  implementation.rs  lib.rs  package.rs  report.rs  scope.rs  vfs.rs
asena-ast-format/: Cargo.toml
asena-ast-formatter/: Cargo.toml
asena-ast-lowering/: Cargo.toml  Test.ase
asena-ast-lowering/src/: db.rs  decl.rs  error.rs  expr.rs  lib.rs  literal.rs  pattern.rs  stmt.rs  types.rs
asena-ast-lowering/src/decl/: class.rs  class_decl.rs  enum.rs  enum_decl.rs  instance.rs  instance_decl.rs  trait.rs  trait_decl.rs
asena-ast-resolver/: Cargo.toml  Test.ase
asena-ast-resolver/src/: db.rs  decl.rs  decl_resolver.rs  error.rs  lib.rs  scope_resolver.rs  scopes.rs  test.ase
asena-ast-resolver/src/decl/: class_decl.rs  enum_decl.rs  instance_decl.rs  trait_decl.rs
asena-ast/src/: binary.rs  binding.rs  body.rs  db.rs  debug.rs  decl.rs  declaration_site.rs  expr.rs  ide_context.rs  identifier.rs  lib.rs  literal.rs  parameter.rs  pat.rs  reporter.rs  spec.rs  stmt.rs  stub.rs  terminal.rs  visitor.rs  walker.rs
asena-ast/src/decl/: command.rs  constraint.rs  default_method.rs  property.rs  variant.rs  where_clause.rs
asena-ast/src/expr/: accessor.rs  accessor_segment.rs  branch.rs  case.rs  lam_parameter.rs
asena-ast/src/identifier/: binding.rs  function.rs  global.rs  local.rs  path.rs
asena-ast/src/stub/: debug.rs  display.rs  enum_stub.rs  leaf.rs  terminal.rs
asena-ast/src/traits/: binary.rs  function.rs  global_decl.rs  has_name.rs  top_level.rs
asena-client/: package.json  tsconfig.json
asena-client/src/: extension.ts
asena-coverage/: Cargo.toml
asena-derive/: Cargo.toml
asena-derive/src/: ast_build_fn.rs  ast_command.rs  ast_debug.rs  ast_derive_leaf.rs  ast_derive_located.rs  ast_derive_node.rs  ast_derive_reporter.rs  ast_derive_step.rs  ast_derive_walker.rs  ast_from.rs  ast_leaf.rs  ast_listenable.rs  ast_listener.rs  ast_of.rs  ast_step.rs  ast_terminal.rs  ast_walkable.rs  ast_walker.rs  lib.rs  util.rs
asena-driver/: Cargo.toml
asena-driver-derive/: Cargo.toml
asena-drop-bomb/: Cargo.toml
asena-drop-bomb/src/: lib.rs
asena-format/: Cargo.toml
asena-grammar/: Cargo.toml
asena-grammar/src/: lib.rs  macros.rs
asena-grammar/tests/: mod.rs  simple.ase
asena-highlight/: Cargo.toml
asena-highlight/src/: highlight.rs  lib.rs  semantic.rs  simple.ase  test.ase
asena-hir/: Cargo.toml
asena-hir-db/: Cargo.toml
asena-hir-db/src/: db.rs  interners.rs  lib.rs  loceval.rs  mbind.rs  rc.rs
asena-hir-derive/: Cargo.toml
asena-hir-derive/src/: lib.rs
asena-hir-leaf/: Cargo.toml
asena-hir-leaf/src/: hir_debug.rs  hir_sexpr.rs  lib.rs  macros.rs
asena-hir-lowering/: Cargo.toml
asena-hir-lowering/src/: cg.rs  db.rs  lib.rs
asena-hir/src/: attr.rs  database.rs  expr.rs  file.rs  hir_type.rs  interner.rs  lib.rs  literal.rs  loc.rs  pattern.rs  query.rs  stmt.rs  top_level.rs  value.rs
asena-hir/src/query/: dbg.rs  interners.rs  leaf.rs
asena-hir/src/value/: instr.rs  monads.rs
asena-interner/: Cargo.toml
asena-interner/src/: lib.rs  string.rs
asena-leaf/: Cargo.toml
asena-leaf/src/: ast.rs  green.rs  kind.rs  lib.rs  macros.rs  node.rs  spec.rs  token.rs
asena-leaf/src/ast/: cursor.rs  green.rs  key.rs  lexeme.rs  listener.rs  tree.rs  value.rs  visitor.rs  walk.rs
asena-leaf/src/ast/green/: ast_leaf.rs  bridges.rs
asena-leaf/src/ast/lexeme/: ast.rs  bridges.rs  listener.rs  maybe.rs  walkable.rs
asena-leaf/src/macros/: ast_virtual.rs
asena-leaf/src/token/: kind.rs  text.rs  token_set.rs
asena-lexer/: Cargo.toml
asena-lexer/src/: lib.rs  token.rs
asena-parser/: Cargo.toml
asena-parser/src/: error.rs  event.rs  lib.rs  support.rs
asena-prec/: Cargo.toml
asena-prec/src/: commands.rs  db.rs  lib.rs
asena-proc-macro/: Cargo.toml
asena-query/: Cargo.toml
asena-query/src/: graph.rs  incremental.rs  lib.rs  node.rs  pipeline.rs  search.rs
asena-report/: Cargo.toml
asena-report/src/: errors.rs  ide_diagnostic.rs  lib.rs  quickfix.rs  report.rs
asena-runtime/: Cargo.toml
asena-runtime/src/: array_list.rs  class.rs  lib.rs
asena-server/: Cargo.toml
asena-server/src/: backend.rs  ide_db.rs  main.rs
asena-span/: Cargo.toml
asena-span/src/: lib.rs  loc.rs
asena-typer/: Cargo.toml
asena-typer/src/: infer.rs  lib.rs  test.ase  validation.rs
asena/src/: imp.rs  main.rs  panik.rs
src/: ast.rs  graph.rs  lexer.rs  main.rs  parser.rs  report.rs  simple.ase  span.rs  token.rs
src/ast/: green.rs  kind.rs  macros.rs  named.rs  node.rs  spec.rs  token.rs
src/lexer/: span.rs  token.rs
src/parser/: builder.rs  error.rs  event.rs  grammar.rs  report.rs  support.rs
