[workspace]
members = [
  "asena",
  "asena-ast",
  "asena-derive",
  "asena-highlight",
  "asena-ast-db",
  "asena-ast-formatter",
  "asena-ast-lowering",
  "asena-ast-resolver",
  "asena-hir",
  "asena-hir-lowering",
  "asena-hir-derive",
  "asena-grammar",
  "asena-drop-bomb",
  "asena-interner",
  "asena-leaf",
  "asena-lexer",
  "asena-parser",
  "asena-prec",
  "asena-coverage",
  "asena-query",
  "asena-report",
  "asena-runtime",
  "asena-span",
]
