[workspace]
members = [
  "asena",
  "asena-ast",
  "asena-derive",
  "asena-highlight",
  "asena-ast-db",
  "asena-ast-formatter",
  "asena-ast-lowering",
  "asena-ast-resolver",
  "asena-hir",
  "asena-hir-db",
  "asena-hir-lowering",
  "asena-hir-derive",
  "asena-grammar",
  "asena-drop-bomb",
  "asena-leaf",
  "asena-lexer",
  "asena-parser",
  "asena-prec",
  "asena-report",
  "asena-runtime",
  "asena-span",
]
