
[package]
edition = "2021"
name = "asena-ast-db"
version = "0.1.0"

[dependencies]
ariadne = "0.2"
asena-ast = {path = "../asena-ast"}
asena-grammar = {path = "../asena-grammar"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-parser = {path = "../asena-parser"}
asena-report = {path = "../asena-report"}
asena-span = {path = "../asena-span"}
fxhash = "0.2.1"
if_chain = "1.0.2"
im = "15.1.0"
itertools = "0.10.5"
salsa = "0.17.0-pre.2"
salsa-macros = "0.17.0-pre.2"
thiserror = "1.0.40"
