
[package]
edition = "2021"
name = "asena-ast-db"
version = "0.1.0"

[dependencies]
ariadne = "0.2"
asena-ast = {path = "../asena-ast"}
asena-grammar = {path = "../asena-grammar"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-parser = {path = "../asena-parser"}
asena-report = {path = "../asena-report"}
asena-span = {path = "../asena-span"}

dashmap = {workspace = true}
fxhash = {workspace = true}
if_chain = {workspace = true}
im = {workspace = true}
im-rc = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
salsa = {workspace = true}
thiserror = {workspace = true}
