
[package]
edition = "2021"
name = "asena-ast-formatter"
version = "0.1.0"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-leaf = {path = "../asena-leaf"}
asena-span = {path = "../asena-span"}

dashmap = {workspace = true}
fxhash = {workspace = true}
if_chain = {workspace = true}
im = {workspace = true}
im-rc = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
salsa = {workspace = true}
thiserror = {workspace = true}
