
[package]
edition = "2021"
name = "asena-ast-lowering"
version = "0.1.0"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-hir = {path = "../asena-hir"}
asena-hir-leaf = {path = "../asena-hir-leaf"}
asena-leaf = {path = "../asena-leaf"}
asena-span = {path = "../asena-span"}
fxhash = "0.2.1"
im = "15.1.0"
itertools = "0.10.5"
