
[package]
edition = "2021"
name = "asena-ast"
version = "0.1.0"

[dependencies]
asena-derive = {path = "../asena-derive"}
asena-leaf = {path = "../asena-leaf"}
asena-report = {path = "../asena-report"}
asena-span = {path = "../asena-span"}

dashmap = {workspace = true}
fxhash = {workspace = true}
if_chain = {workspace = true}
im = {workspace = true}
im-rc = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
salsa = {workspace = true}
thiserror = {workspace = true}
