
[package]
edition = "2021"
name = "asena-highlight"
version = "0.1.0"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-derive = {path = "../asena-derive"}
asena-grammar = {path = "../asena-grammar"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-parser = {path = "../asena-parser"}
asena-report = {path = "../asena-report"}
asena-span = {path = "../asena-span"}

colored = "2"

fxhash = {workspace = true}
im = {workspace = true}
itertools = {workspace = true}
salsa = {workspace = true}
