
[package]
edition = "2021"
name = "asena-hir-lowering"
version = "0.1.0"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-ast-db = {path = "../asena-ast-db"}
asena-ast-lowering = {path = "../asena-ast-lowering"}
asena-ast-resolver = {path = "../asena-ast-resolver"}
asena-grammar = {path = "../asena-grammar"}
asena-hir = {path = "../asena-hir"}
asena-hir-db = {path = "../asena-hir-db"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-parser = {path = "../asena-parser"}
asena-report = {path = "../asena-report"}
asena-span = {path = "../asena-span"}

eyre = "0.6.8"
inkwell = {git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"]}

dashmap = {workspace = true}
fxhash = {workspace = true}
if_chain = {workspace = true}
im = {workspace = true}
im-rc = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
salsa = {workspace = true}
thiserror = {workspace = true}
