
[package]
edition = "2021"
name = "asena-hir"
version = "0.1.0"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-hir-derive = {path = "../asena-hir-derive"}
asena-leaf = {path = "../asena-leaf"}
asena-span = {path = "../asena-span"}
enum_dispatch = "0.3.12"
fxhash = "0.2.1"
im = "15.1.0"
itertools = "0.10.5"
paste = "1.0"
