
[package]
edition = "2021"
name = "asena-hir"
version = "0.1.0"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-ast-db = {path = "../asena-ast-db"}
asena-hir-derive = {path = "../asena-hir-derive"}
asena-leaf = {path = "../asena-leaf"}
asena-span = {path = "../asena-span"}
derive-new = "0.5.5"
enum_dispatch = "0.3.12"
fxhash = "0.2.1"
im = "15.1.0"
itertools = "0.10.5"
paste = "1.0"
salsa = "0.17.0-pre.2"
