
[package]
edition = "2021"
name = "asena-parser"
version = "0.1.0"

[dependencies]
asena-drop-bomb = {path = "../asena-drop-bomb"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-report = {path = "../asena-report"}
asena-span = {path = "../asena-span"}

ariadne = "0.2"

thiserror = {workspace = true}
