
[package]
edition = "2021"
name = "asena-report"
version = "0.1.0"

[dependencies]
asena-leaf = {path = "../asena-leaf"}
asena-span = {path = "../asena-span"}

fxhash = {workspace = true}
if_chain = {workspace = true}
im = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
salsa = {workspace = true}
thiserror = {workspace = true}
