
[package]
edition = "2021"
name = "asena-format"
version = "0.1.0"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-derive = {path = "../asena-derive"}
asena-grammar = {path = "../asena-grammar"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-parser = {path = "../asena-parser"}
asena-report = {path = "../asena-report"}
asena-span = {path = "../asena-span"}

dashmap = {workspace = true}
fxhash = {workspace = true}
if_chain = {workspace = true}
im = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
thiserror = {workspace = true}
