
[package]
edition = "2021"
name = "asena-server"
version = "0.1.0"

[[bin]]
name = "asena-language-server"
path = "src/main.rs"

[dependencies]
asena = {path = "../asena"}
asena-ast = {path = "../asena-ast"}
asena-ast-db = {path = "../asena-ast-db"}
asena-ast-lowering = {path = "../asena-ast-lowering"}
asena-ast-resolver = {path = "../asena-ast-resolver"}
asena-grammar = {path = "../asena-grammar"}
asena-highlight = {path = "../asena-highlight"}
asena-hir = {path = "../asena-hir"}
asena-hir-db = {path = "../asena-hir-db"}
asena-hir-lowering = {path = "../asena-hir-lowering"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-parser = {path = "../asena-parser"}
asena-prec = {path = "../asena-prec"}
colored = "2"
dashmap = "5.1.0"
env_logger = "0.9.0"
fxhash = "0.2.1"
im = "15.1.0"
im-rc = "15.0.0"
itertools = "0.10.5"
log = "0.4.14"
ropey = "1.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.78"
tokio = {version = "1.17.0", features = ["full"]}
tower-lsp = {version = "0.19.0", features = ["proposed"]}
