
[package]
edition = "2021"
name = "asena-server"
version = "0.1.0"

[[bin]]
name = "asena-language-server"
path = "src/main.rs"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-ast-db = {path = "../asena-ast-db"}
asena-ast-lowering = {path = "../asena-ast-lowering"}
asena-ast-resolver = {path = "../asena-ast-resolver"}
asena-grammar = {path = "../asena-grammar"}
asena-highlight = {path = "../asena-highlight"}
asena-hir = {path = "../asena-hir"}
asena-hir-db = {path = "../asena-hir-db"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-parser = {path = "../asena-parser"}
asena-prec = {path = "../asena-prec"}
asena-report = {path = "../asena-report"}

colored = "2"
env_logger = "0.9.0"
ropey = "1.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.78"
tokio = {version = "1.17.0", features = ["macros", "fs", "rt-multi-thread", "io-std"]}
tower-lsp = {version = "0.19.0", features = ["proposed"]}

dashmap = {workspace = true}
fxhash = {workspace = true}
if_chain = {workspace = true}
im = {workspace = true}
im-rc = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
salsa = {workspace = true}
thiserror = {workspace = true}
