
[package]
edition = "2021"
name = "asena"
version = "0.1.0"

[dependencies]
asena-ast = {path = "../asena-ast"}
asena-ast-db = {path = "../asena-ast-db"}
asena-ast-lowering = {path = "../asena-ast-lowering"}
asena-ast-resolver = {path = "../asena-ast-resolver"}
asena-grammar = {path = "../asena-grammar"}
asena-highlight = {path = "../asena-highlight"}
asena-hir = {path = "../asena-hir"}
asena-hir-db = {path = "../asena-hir-db"}
asena-leaf = {path = "../asena-leaf"}
asena-lexer = {path = "../asena-lexer"}
asena-parser = {path = "../asena-parser"}
asena-prec = {path = "../asena-prec"}
clap = {version = "4.2.7", features = ["derive"]}
env_logger = "0.9.0"
eyre = "0.6.8"
log = "0.4.0"
salsa = "0.17.0-pre.2"
